[metadata]
name = oslo.i18n
summary = oslo.i18n library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/oslo
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    oslo
    oslo.i18n
    oslo_i18n
namespace_packages =
    oslo

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo.i18n/locale
domain = oslo.i18n

[update_catalog]
domain = oslo.i18n
output_dir = oslo.i18n/locale
input_file = oslo.i18n/locale/oslo.i18n.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo.i18n/locale/oslo.i18n.pot

[pbr]
warnerrors = True

[wheel]
universal = 1
