[metadata]
name = oslo.i18n
summary = Oslo i18n library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/oslo.i18n
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    oslo_i18n

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo_i18n/locale
domain = oslo_i18n

[update_catalog]
domain = oslo_i18n
output_dir = oslo_i18n/locale
input_file = oslo_i18n/locale/oslo_i18n.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext _C:1c,2 _P:1,2
mapping_file = babel.cfg
output_file = oslo_i18n/locale/oslo_i18n.pot

[pbr]
warnerrors = True

[wheel]
universal = 1
