[metadata]
name = oslo.i18n
summary = Oslo i18n library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/oslo.i18n/latest
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython


[files]
packages =
    oslo_i18n

[compile_catalog]
directory = oslo_i18n/locale
domain = oslo_i18n

[update_catalog]
domain = oslo_i18n
output_dir = oslo_i18n/locale
input_file = oslo_i18n/locale/oslo_i18n.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext _C:1c,2 _P:1,2
mapping_file = babel.cfg
output_file = oslo_i18n/locale/oslo_i18n.pot
